--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@stripe/react-stripe-js": "^2.3.2",
     "@stripe/stripe-js": "^2.1.11",
     "axios": "^1.6.1",
+    "firebase": "^10.6.0",
+    "firebase-tools": "^12.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.10",
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.0",
+    "swiper": "^11.0.4",
     "vite-plugin-require": "^1.1.11"
   },
   "devDependencies": {
