--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.10",
     "react-router-dom": "^6.18.0",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.0",
     "swiper": "^11.0.4",
     "vite-plugin-require": "^1.1.11"
